Fixed bugs with time in sunrise-sunset component and fixed gap for old browsers

--- a/src/Components/Failed/Failed.module.scss
+++ b/src/Components/Failed/Failed.module.scss
@@ -42,6 +42,9 @@
 
 @media screen and (max-width: 567px) {
     .failed{
+        .title{
+            width: 100%;
+        }
         flex-direction: column;
         img{
             margin-top: 30px;
