--- a/src/Components/Main/Highlights/Highlights.module.scss
+++ b/src/Components/Main/Highlights/Highlights.module.scss
@@ -16,3 +16,11 @@
         gap: 20px;
     }
 }
+
+@supports not(gap: 20px) {
+    .highlight__box{
+        div {
+            margin: 20px;
+        }
+    }
+}
